feat: linear regression for trainting model hw5

--- a/HomeWork5/wineQualityHomeWork.ipynb
+++ b/HomeWork5/wineQualityHomeWork.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,6 +10,11 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
+    "\n",
+    "from sklearn.preprocessing import StandardScaler, PolynomialFeatures\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
+    "from sklearn.linear_model import LinearRegression, SGDRegressor\n",
+    "from sklearn.metrics import mean_squared_error, root_mean_squared_error, mean_absolute_error\n",
     "\n",
     "sns.set_theme(style='darkgrid', palette='deep')\n",
     "\n"
@@ -24,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +170,7 @@
        "4      9.4        5  "
       ]
      },
-     "execution_count": 75,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +362,7 @@
        "4      9.9        6  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -370,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +443,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -449,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
@@ -458,7 +463,7 @@
        "<Axes: xlabel='quality', ylabel='Density'>"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -480,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +502,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +522,7 @@
        "<Axes: xlabel='quality', ylabel='Density'>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -546,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -687,7 +692,7 @@
        "4      9.4        5  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -704,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
@@ -746,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
@@ -899,7 +904,7 @@
        "4      9.4        5         0.70     3.090909  "
       ]
      },
-     "execution_count": 96,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -928,7 +933,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [
     {
@@ -973,16 +978,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x30e3843b0>"
+       "<seaborn.axisgrid.PairGrid at 0x337719610>"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1012,6 +1017,128 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Training model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Preparing data for training and test model\n",
+    "# Create a scaler \n",
+    "scaler = StandardScaler()\n",
+    "\n",
+    "# Fit data scaler variable\n",
+    "data_scaler = scaler.fit_transform(new_df.drop(columns='quality'))\n",
+    "\n",
+    "# Split train and test chank \n",
+    "X_train, X_test, y_train, y_test = train_test_split(data_scaler, new_df.quality, train_size=.7, random_state=42, shuffle=True, stratify=new_df['quality'])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We split out the data frame on train and test data in proportion for train 0.7 and 0.3 for test part accordingly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Linear Regression "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Cross-Validation Scores: [0.30882795 0.30352645 0.29781394 0.30742552]\n"
+     ]
+    }
+   ],
+   "source": [
+    "linear_reg = LinearRegression()\n",
+    "\n",
+    "cv_sc = cross_val_score(linear_reg, X_train, y_train, cv=4)\n",
+    "print(f\"Cross-Validation Scores: {cv_sc}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train Score: 0.3115519886793615\n",
+      "Test Score: 0.2927131985072786\n"
+     ]
+    }
+   ],
+   "source": [
+    "linear_reg.fit(X_train, y_train)\n",
+    "\n",
+    "print(f'Train Score: {reg.score(X_train, y_train)}')\n",
+    "print(f'Test Score: {reg.score(X_test, y_test)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'MSE Train': 0.616,\n",
+       " 'MSE Test': 0.631,\n",
+       " 'RMSE Train': 0.785,\n",
+       " 'RMSE Test': 0.795,\n",
+       " 'MAE Train': 0.51,\n",
+       " 'MAE Test': 0.526}"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def error_est(model, X_train, X_test, y_train, y_test):\n",
+    "    y_train_pred = np.around(model.predict(X_train), 0)\n",
+    "    y_test_pred = np.around(model.predict(X_test), 0)\n",
+    "\n",
+    "    return {\n",
+    "        \"MSE Train\": round(mean_squared_error(y_train, y_train_pred), 3),\n",
+    "        \"MSE Test\": round(mean_squared_error(y_test, y_test_pred), 3),\n",
+    "        \"RMSE Train\": round(root_mean_squared_error(y_train, y_train_pred), 3),\n",
+    "        \"RMSE Test\": round(root_mean_squared_error(y_test, y_test_pred), 3),\n",
+    "        \"MAE Train\": round(mean_absolute_error(y_train, y_train_pred), 3),\n",
+    "        \"MAE Test\": round(mean_absolute_error(y_test, y_test_pred), 3),\n",
+    "    }\n",
+    "\n",
+    "error_est(linear_reg, X_train, X_test, y_train, y_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1021,7 +1148,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "jupyterEnv",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1035,7 +1162,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.0"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
