--- a/HomeWork6/abalone_metrics.ipynb
+++ b/HomeWork6/abalone_metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 345,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 346,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "4        0.055      7  "
       ]
      },
-     "execution_count": 331,
+     "execution_count": 346,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 347,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "4        0.055      7  "
       ]
      },
-     "execution_count": 332,
+     "execution_count": 347,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 348,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 349,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 350,
    "metadata": {},
    "outputs": [
     {
@@ -453,16 +453,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 351,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x328ced370>"
+       "<seaborn.axisgrid.PairGrid at 0x328cef130>"
       ]
      },
-     "execution_count": 336,
+     "execution_count": 351,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -497,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 352,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 353,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 354,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +612,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 356,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 357,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 358,
    "metadata": {},
    "outputs": [
     {
@@ -734,16 +734,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 359,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x337939e50>"
+       "<matplotlib.legend.Legend at 0x33a2934d0>"
       ]
      },
-     "execution_count": 344,
+     "execution_count": 359,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -769,14 +769,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The graph shows that the model does not affect extreme values ​​and there is a tendency for erroneous class assignment around 10, but overall it behaves quite well"
+    "The graph shows that the model does not affect extreme values ​​and there is a tendency for erroneous class assignment around 10."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion: The result s not satisfy. Trainging and test score are not high. Metrics are not very good, MSE is quite high, P2 < 0.5. I've tried use weights='distance' and  p=1 parameters for kNN model, but the result was the same. Perhaps the reason for the bed training model was the high correlation of data. "
+    "Conclusion: The result s not satisfy. Trainging and test score are not high. Metrics are not very good, MSE is quite high, P2 < 0.5. I can archive best result with 13 number neighbors than with 5, but result was not quite big. Also I've tried use weights='distance' and  p=1 parameters for kNN model, but the result was the same. Perhaps the reason for the bed training model was the high correlation of data. "
    ]
   }
  ],
