feat: classification model for abalone hw6

--- a/HomeWork6/abalone_metrics.ipynb
+++ b/HomeWork6/abalone_metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 424,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,13 +12,13 @@
     "import seaborn as sns\n",
     "from sklearn.model_selection import train_test_split, cross_val_score, GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.metrics import mean_squared_error, r2_score"
+    "from sklearn.neighbors import KNeighborsRegressor, KNeighborsClassifier\n",
+    "from sklearn.metrics import mean_squared_error, r2_score, accuracy_score, classification_report, confusion_matrix"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 425,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "4        0.055      7  "
       ]
      },
-     "execution_count": 346,
+     "execution_count": 425,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 426,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "4        0.055      7  "
       ]
      },
-     "execution_count": 347,
+     "execution_count": 426,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 427,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 428,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 429,
    "metadata": {},
    "outputs": [
     {
@@ -453,16 +453,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 430,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.PairGrid at 0x328cef130>"
+       "<seaborn.axisgrid.PairGrid at 0x14850b570>"
       ]
      },
-     "execution_count": 351,
+     "execution_count": 430,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -497,15 +497,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 431,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Split the data into features (X) and target variable (y)\n",
     "X = df.drop(\"Rings\", axis=1)\n",
-    "y = df[\"Rings\"]\n",
-    "\n",
-    "# Split the data into training and testing sets\n"
+    "y = df[\"Rings\"]\n"
    ]
   },
   {
@@ -517,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 432,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 433,
    "metadata": {},
    "outputs": [
     {
@@ -576,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 434,
    "metadata": {},
    "outputs": [
     {
@@ -612,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 435,
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 436,
    "metadata": {},
    "outputs": [
     {
@@ -690,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 437,
    "metadata": {},
    "outputs": [
     {
@@ -734,16 +732,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 438,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x33a2934d0>"
+       "<matplotlib.legend.Legend at 0x34166f110>"
       ]
      },
-     "execution_count": 359,
+     "execution_count": 438,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -777,6 +775,209 @@
    "metadata": {},
    "source": [
     "Conclusion: The result s not satisfy. Trainging and test score are not high. Metrics are not very good, MSE is quite high, P2 < 0.5. I can archive best result with 13 number neighbors than with 5, but result was not quite big. Also I've tried use weights='distance' and  p=1 parameters for kNN model, but the result was the same. Perhaps the reason for the bed training model was the high correlation of data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Classification model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 439,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Sex</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>ShuckedWeight</th>\n",
+       "      <th>Rings</th>\n",
+       "      <th>Size</th>\n",
+       "      <th>Weights</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.095</td>\n",
+       "      <td>0.2245</td>\n",
+       "      <td>15</td>\n",
+       "      <td>0.663636</td>\n",
+       "      <td>0.001748</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.090</td>\n",
+       "      <td>0.0995</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.602273</td>\n",
+       "      <td>0.000076</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>0.135</td>\n",
+       "      <td>0.2565</td>\n",
+       "      <td>9</td>\n",
+       "      <td>0.631579</td>\n",
+       "      <td>0.005160</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.125</td>\n",
+       "      <td>0.2155</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.646018</td>\n",
+       "      <td>0.001965</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.080</td>\n",
+       "      <td>0.0895</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.621951</td>\n",
+       "      <td>0.000040</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Sex  Height  ShuckedWeight  Rings      Size   Weights\n",
+       "0    2   0.095         0.2245     15  0.663636  0.001748\n",
+       "1    2   0.090         0.0995      7  0.602273  0.000076\n",
+       "2    0   0.135         0.2565      9  0.631579  0.005160\n",
+       "3    2   0.125         0.2155     10  0.646018  0.001965\n",
+       "4    1   0.080         0.0895      7  0.621951  0.000040"
+      ]
+     },
+     "execution_count": 439,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Make sure that data frame is ok and 'Sex' target has numberical values\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 440,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split the data into features (X) and target variable (y)\n",
+    "X_class = df.drop(\"Sex\", axis=1)\n",
+    "y_class = df[\"Sex\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scale and split the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 441,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Scale the data using StandardScaler\n",
+    "scaler_class = StandardScaler()\n",
+    "\n",
+    "# Scale X \n",
+    "X_scaled = scaler_class.fit_transform(X)\n",
+    "\n",
+    "# Split data\n",
+    "X_train_class, X_test_class, y_train_class, y_test_class = train_test_split(X_class, y_class, test_size=0.2, random_state=42, shuffle=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 442,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train a kNN classification model with 13 neighbors (we figure out that 13 is the best number)\n",
+    "knn_class = KNeighborsClassifier(n_neighbors=13)  # Choose the number of neighbors\n",
+    "knn_class.fit(X_train_class, y_train_class)\n",
+    "\n",
+    "# Make predictions on the test set\n",
+    "y_pred_class = knn_class.predict(X_test_class)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluate model "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 443,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.53\n",
+      "Classification Report:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.40      0.37      0.38       262\n",
+      "           1       0.70      0.80      0.75       267\n",
+      "           2       0.46      0.43      0.45       307\n",
+      "\n",
+      "    accuracy                           0.53       836\n",
+      "   macro avg       0.52      0.53      0.53       836\n",
+      "weighted avg       0.52      0.53      0.52       836\n",
+      "\n",
+      "Confusion Matrix:\n",
+      "[[ 97  37 128]\n",
+      " [ 25 213  29]\n",
+      " [120  54 133]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Evaluate the model's performance\n",
+    "accuracy = accuracy_score(y_test_class, y_pred_class)\n",
+    "print(f'Accuracy: {accuracy:.2f}')\n",
+    "print('Classification Report:')\n",
+    "print(classification_report(y_test_class, y_pred_class))\n",
+    "print('Confusion Matrix:')\n",
+    "print(confusion_matrix(y_test_class, y_pred_class))"
    ]
   }
  ],
