feat: howework with abalone data frame done

--- a/HomeWork6/abalone_metrics.ipynb
+++ b/HomeWork6/abalone_metrics.ipynb
@@ -17,8 +17,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load data"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 425,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +147,7 @@
     }
    ],
    "source": [
-    "# Columns for abalon dataframe\n",
+    "# Columns for abalone dataframe\n",
     "columns = [\n",
     "    \"Sex\", \"Length\", \"Diameter\", \"Height\", \"WholeWeight\",\n",
     "    \"ShuckedWeight\", \"VisceraWeight\", \"ShellWeight\", \"Rings\"]\n",
@@ -344,7 +351,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is no NaN values and categorial variable"
+    "There is no NaN values and categorial variable and we can work on analize data"
    ]
   },
   {
@@ -388,12 +395,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the plot above we can see very huge correlation between feature. Let's try to deacress it."
+    "In the plot above we can see very huge correlation between features. Let's try to deacress it."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 429,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -411,8 +418,6 @@
     "# Create a new features \n",
     "df['Size'] = df['Diameter'] / (df['Length'] + df['Height'])\n",
     "df['Weights'] = df['WholeWeight'] *  df['VisceraWeight'] * df['ShellWeight'] * df['ShuckedWeight']\n",
-    "# df['Size'] = df['Size'].replace([np.inf, -np.inf], np.nan, inplace=True)\n",
-    "# df['Weights'] = df['Weights'].replace([np.inf, -np.inf], np.nan, inplace=True)\n",
     "\n",
     "# Drop the most correlation columns\n",
     "df = df.drop(columns=['Diameter', 'Length', 'WholeWeight', 'VisceraWeight', 'ShellWeight'])\n",
@@ -441,7 +446,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I have tried to resolve issues with the correlation matrix, but a lot of columns correlate with each other and I have to drop them. For instance, 'Height' and  'Shuckedwight' features habe very high values as well, we leave it because dataframe has already not enough data. Two new features 'Size' and 'Weights' help me generate more data for the training model."
+    "I have tried to resolve issues with the correlation matrix, but a lot of columns correlate with each other and I have to drop them. For instance, 'Height' and  'Shuckedwight' features have very high values as well, we leave it because dataframe has already not enough data. Two new features 'Size' and 'Weights' help me generate more data for the training model."
    ]
   },
   {
@@ -453,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 430,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +486,7 @@
     "# Visualize pair grid for our model\n",
     "pairGrid = sns.PairGrid(df, corner=True, diag_sharey=False)\n",
     "\n",
-    "# Lower part of grie\n",
+    "# Lower part of grid\n",
     "pairGrid.map_lower(sns.scatterplot, s=15)\n",
     "\n",
     "# Diagonal \n",
@@ -650,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 436,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +668,7 @@
     }
    ],
    "source": [
-    "# Create Grid Search to calculate the best counter for kNN model\n",
+    "# Create Grid Search to calculate the best count neighbors for kNN model\n",
     "param_grid = {'n_neighbors': range(1, 20)}\n",
     "grid_search = GridSearchCV(KNeighborsRegressor(), param_grid, cv=4, scoring='r2')\n",
     "grid_search.fit(X_train, y_train)\n",
@@ -774,7 +779,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Conclusion: The result s not satisfy. Trainging and test score are not high. Metrics are not very good, MSE is quite high, P2 < 0.5. I can archive best result with 13 number neighbors than with 5, but result was not quite big. Also I've tried use weights='distance' and  p=1 parameters for kNN model, but the result was the same. Perhaps the reason for the bed training model was the high correlation of data. "
+    "Conclusion: The result is not satisfy. Trainging and test score are not high. Metrics are not very good, MSE is quite high, P2 < 0.5. I could archive best result with 13 number neighbors than with 5, but result was not quite changed. Also I've tried use weights='distance' and  p=1 parameters for kNN model, but the result was the same. Perhaps the reason for the bed training model was the high correlation of data and not enough features."
    ]
   },
   {
@@ -978,6 +983,13 @@
     "print(classification_report(y_test_class, y_pred_class))\n",
     "print('Confusion Matrix:')\n",
     "print(confusion_matrix(y_test_class, y_pred_class))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Conclusion: The model is able to correctly classify approximately 40% of the samples in Male and Female class. This means that out of all the samples that are actually Male, or Female, the model is able to correctly identify about 40% of them. For Infant value equal around 70%. Accuracy value equal 0.53 and well-balanced dataframe are not good and not bad result, but low precision and recall for Male and Female point us to focus on improving the dataset, features, or model algorithm. "
    ]
   }
  ],
