feat: train and predict credit dataset with Tree clasificator hw7

--- a/HomeWork6/abalone_metrics.ipynb
+++ b/HomeWork6/abalone_metrics.ipynb
@@ -520,12 +520,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 432,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Scale the data using StandardScaler\n",
-    "scaler = StandardScaler()\n",
+    "scaler = Min()\n",
     "\n",
     "# Scale X \n",
     "X_scaled = scaler.fit_transform(X)\n",
