feat: work with BaggingClassifier and Random Forest

--- a/HomeWork6/abalone_metrics.ipynb
+++ b/HomeWork6/abalone_metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 424,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 426,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -356,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 428,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -490,7 +490,8 @@
     "pairGrid.map_lower(sns.scatterplot, s=15)\n",
     "\n",
     "# Diagonal \n",
-    "pairGrid.map_diag(sns.kdeplot, lw=2)"
+    "pairGrid.map_diag(sns.kdeplot, lw=2)\n",
+    "\n"
    ]
   },
   {
@@ -502,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 431,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 433,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 434,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -615,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 435,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 437,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -737,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 438,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -791,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 439,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -912,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 441,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 442,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 443,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
